# alquimia-dev

./: .gitignore  .install-linux-deps.sh  .install-osx-deps.sh  .travis.yml  CMakeLists.txt  KNOWN_ISSUES.txt  LICENSE.txt  README.md  README.rst  buildAlquimia.sh  wscript
.github/workflows/: dev.yml
.travis/: install-alquimia.sh  install-crunchtope.sh  install-linux-deps.sh  install-petsc.sh  install-pflotran.sh  pflotran_version_patch.txt
alquimia/: CMakeLists.txt  alquimia.c  alquimia.h.in  alquimia.vfproj  alquimia_constants.c  alquimia_constants.h  alquimia_containers.F90  alquimia_containers.h  alquimia_fortran_interface_mod.F90  alquimia_interface.c  alquimia_interface.h  alquimia_memory.c  alquimia_memory.h  alquimia_util.c  alquimia_util.h  c_f_interface_module.F90  crunch_alquimia_interface.F90  crunch_alquimia_interface.h  crunch_alquimia_wrappers.F90  pflotran_alquimia_interface.F90  pflotran_alquimia_interface.h  pflotran_alquimia_wrappers.F90  pflotran_petsc_stubs.F90
alquimia/mixed/: Makefile  cc-f90-strings.F90  cc-f90-strings.h  struct-array-pointer.cc  struct-derived.F90
benchmarks/: CMakeLists.txt  aqueous.dbs  calcite-short-ac.cfg  calcite-short-crunch-cc.cfg  calcite-short-pc-pflotran.cfg  calcite-vf-pc-pflotran.cfg  calcite-vf-pc.cfg  calcite.dbs  general-reaction-ac-pflotran.cfg  general-reaction-crunch-ac.cfg  general-reaction-crunch.in  general-reaction-pc-pflotran.cfg  general-reaction-pc.cfg  general-reaction.in  ion-exchange-valocchi-cc-crunch.cfg  ion-exchange-valocchi-pc.cfg  isotherms-crunch-cc.cfg  isotherms-pc-pflotran.cfg  isotherms-pflotran.in  isotherms.in  surface-complexation-2-ac-pflotran.cfg
benchmarks/batch_chem/: ABCD_microbial.in  CMakeLists.txt  calcite-co2-crunch-cc.cfg  calcite-short-ac-crunch.cfg  calcite-short-ac-pflotran.cfg  calcite-short-cc-crunch.cfg  calcite-short-crunch.in  calcite-short-pc-pflotran.cfg  calcite-vf-ac-crunch.cfg  calcite-vf-cc-crunch.cfg  calcite-vf-pc-pflotran.cfg  calcite-vf-sa-pc-pflotran.cfg  calcite-vf-sa-pflotran.in  calcite.dbs  ch4-o2-crunch-cc.cfg  ch4-o2-crunch.in  ch4-o2.dbs  ch4-o2.dbsx  dummy-test-1.cfg  general-reaction-ac-crunch.cfg  general-reaction-ac-pflotran.cfg  general-reaction-cc-crunch.cfg  general-reaction-pc-pflotran.cfg  general-reaction.dbs  general-reaction.dbsx  ion-exchange-valocchi-ac-crunch.cfg  ion-exchange-valocchi-ac-pflotran.cfg  ion-exchange-valocchi-cc-crunch.cfg  ion-exchange-valocchi-pc-pflotran.cfg  ion-exchange-valocchi-pflotran.in  isotherms-ac-crunch.cfg  isotherms-ac-pflotran.cfg  isotherms-cc-crunch.cfg  isotherms-crunch.in  microbial-pflotran.cfg  surface-complexation-2-ac-crunch.cfg  surface-complexation-2-ac-pflotran.cfg  surface-complexation-2-cc-crunch.cfg  surface-complexation-2-crunch.in  surface-complexation-2-pc-pflotran.cfg
benchmarks/transport/: CMakeLists.txt  calcite-1d-crunch.cfg  calcite-1d-pflotran.cfg  calcite-1d-pflotran.in  farea-1d-pflotran.cfg  farea-1d-pflotran.in  ion-exchange-1d-crunch.cfg  ion-exchange-1d-pflotran.cfg  isotherms-1d-crunch.cfg  isotherms-1d-pflotran.cfg  tracer-1d-crunch.cfg  tracer-1d-pflotran.cfg  tracer-1d-pflotran.in  tritium-1d-crunch.cfg  tritium-1d-pflotran.cfg  tritium-1d-pflotran.in
cmake/Modules/: FindPETSc.cmake  add_alquimia_batch_chem_benchmark.cmake  add_alquimia_transport_benchmark.cmake  add_alquimia_unit_test.cmake
cmake/Templates/: alquimia.cmake.in
contrib/valgrind/: valgrind-pflotran.supp  valgrind-sys.supp  valgrind.txt
doc/: Makefile  batch-tests.rst  conf.py  guidance.rst  index.rst  license.rst  make.bat
doc/APIv0/: APIv0.rst  APIv0_c_utils.rst  APIv0_constants.rst  APIv0_functions.rst  APIv0_structures.rst  index.rst
doc/Workshop_Slides_Nov-12/: alquimia.tex
doc/api/: APIv0.rst  APIv0_c_utils.rst  APIv0_constants.rst  APIv0_functions.rst  APIv0_structures.rst  APIv1.rst  APIv1_c_utils.rst  APIv1_constants.rst  APIv1_functions.rst  (+1 more)
drivers/: BatchChemDriver.c  BatchChemDriver.h  CMakeLists.txt  DriverOutput.c  DriverOutput.h  Makefile  TransportDriver.c  TransportDriver.h  TransportInput.c  TransportInput.h  batch_chem.c  batch_chem.cc  batch_chem.h  cfg_reader.cc  cfg_reader.h  demo_containers.cc  demo_containers.h  demo_output.cc  demo_output.h  demo_utils.cc  demo_utils.h  fpe.c  fpe.h  input_util.c  input_util.h  string_tokenizer.cc  string_tokenizer.h  transport.c
examples/: README.rst  alquimia-pflotran-tests.cfg  batch-compare-alquimia-pflotran.py  batch-test-1.cfg  calcite-kinetics-pflotran-constraints.cfg  calcite-kinetics-short-dc.cfg  calcite-kinetics-short-pc.cfg  calcite-kinetics-short.in  calcite-kinetics-vf-pc.cfg  calcite-kinetics-vf.in  calcite-kinetics.cfg
src/: Makefile  Makefile.inc  README  README.rst  alquimia_containers.h  alquimia_interface.h  alquimia_util.h  crunch_alquimia_interface.F90  crunch_alquimia_interface.h  crunch_alquimia_wrappers.F90  pflotran_alquimia_interface.F90  pflotran_alquimia_interface.h  pflotran_alquimia_wrappers.F90  wscript
tests/: Makefile  README  README.rst  alquimia-pflotran-tests.cfg  batch-compare-alquimia-pflotran.py  calcite-co2-crunch-cc.cfg  calcite-co2-crunch.in  calcite-short-ac.cfg  calcite-short-crunch-cc.cfg  calcite-short-crunch.in  calcite-short-pc.cfg  calcite-short.in  calcite-vf-crunch-cc.cfg  calcite-vf-crunch.in  calcite-vf-pc.cfg  calcite-vf.in  dummy-test-1.cfg  general-reaction-ac.cfg  general-reaction-crunch-cc.cfg  general-reaction-crunch.in  general-reaction-pc.cfg  general-reaction.in  ion-exchange-valocchi-ac.cfg  ion-exchange-valocchi-crunch-ac.cfg  ion-exchange-valocchi-crunch-cc.cfg  ion-exchange-valocchi-crunch.in  ion-exchange-valocchi-pc.cfg  ion-exchange-valocchi.in  isotherms-ac.cfg  isotherms-crunch-ac.cfg  isotherms-crunch.in  isotherms-pc.cfg  isotherms.in  surface-complexation-2-ac.cfg  surface-complexation-2-crunch-ac.cfg  surface-complexation-2-crunch-cc.cfg  surface-complexation-2-crunch.in  surface-complexation-2-pc.cfg  surface-complexation-2.in  surface-complexation.dbs
tools/: update_version_h.py
unit_tests/: CMakeLists.txt  Makefile  test_alquimia_c_utils.c
(+97 files in other folders)
